<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="custom_call_history">@string/call_history</string>
    <string name="custom_remove_from_recent_call">@string/htc_RecentCallPage_Delete</string>
    <string name="custom_view_person_recent_call">@string/menu_view_personal_callHistory</string>
    <string name="htc_forbid_emergency_number">Emergency number cannot be saved to speed dial</string>
    <string name="alert_panel_button_text">OK</string>
    <string name="htc_ota_msg_program_unsuccessful">Programming unsuccessful.</string>
    <string name="htc_ota_msg_program_unsuccessful_ext">Please call customer service</string>
    <string name="htc_ota_dialog_title">OTA message</string>
    <string name="phonecalls_not_supported_title">Phone calls not supported</string>
    <string name="phonecalls_not_supported_body">Oops! An application on your tablet is attempting to make a phone call, but your tablet does not support voice calls.</string>
    <string name="meid">MEID</string>
    <string name="hand_writing_input_method">Handwriting</string>
    <string name="number_input_method">Keypad</string>
    <string name="can_not_find_SIM_contact_title">Find SIM contact</string>
    <string name="can_not_find_SIM_contact_body">Unable to find a SIM contact at position number #%d.</string>
    <string name="can_not_find_SIM_contact_sim_absent">SIM card absent or SIM not ready.</string>
    <string name="ap_version_id">2.00.0000</string>
    <string name="ap_version_name">4.1</string>
    <string name="htc_private_app">People</string>
    <string name="app_label">Dialer</string>
    <string name="browse_tab_label_all">All</string>
    <string name="people_unnamed">Unnamed</string>
    <string name="htc_corp">@com.htc:string/htc_about_company_name</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="htc_speed_dial">Speed dial</string>
    <string name="htc_add">Add</string>
    <string name="call_history">Call history</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="addContact_description">Save to People</string>
    <string name="smartSearchHint">Enter name or number</string>
    <string name="imei">IMEI</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_uim_vm_number_msg">No voicemail number is stored on the UIM card</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="ok">OK</string>
    <string name="favorites_label">Favorites</string>
    <string name="simContacts_emptyLoading">Loading from SIM</string>
    <string name="simContacts_title">SIM address book</string>
    <string name="msg_progress_dialog_title_loading">Loading</string>
    <string name="contactsList">People</string>
    <string name="viewContactDesription">View contact</string>
    <string name="menu_callNumber">Call %s</string>
    <string name="menu_popup_addStar">Add to favorites</string>
    <string name="menu_popup_removeStar">Remove from favorites</string>
    <string name="menu_call">Call</string>
    <string name="title_speed_dial">@string/htc_speed_dial</string>
    <string name="location">Location</string>
    <string name="available">(Available)</string>
    <string name="select_number">Select number</string>
    <string name="select_location">Select location</string>
    <string name="no_define">Not assigned</string>
    <string name="yesButton">OK</string>
    <string name="noButton">Cancel</string>
    <string name="okButtonText">OK</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="htc_speed_dial_add_new">Add new</string>
    <string name="unknown">Unknown</string>
    <string name="voicemail">Voicemail</string>
    <string name="htc_RecentCallPage_Call">Call</string>
    <string name="htc_RecentCallPage_Delete">Delete from call history</string>
    <string name="htc_RecentCallPage_Delete_all">Delete all calls from contact</string>
    <string name="htc_RecentCallPage_SendMsg">Send text message</string>
    <string name="htc_RecentCallPage_EditB4Call">Edit number before calling</string>
    <string name="cancel">Cancel</string>
    <string name="listSeparatorSendEmail">Send mail</string>
    <string name="htc_dialer_menu_speed_dial">@string/htc_speed_dial</string>
    <string name="htc_speed_dialer_empty_text">Press menu to add speed dial number</string>
    <string name="htc_speed_dial_call">Call</string>
    <string name="htc_speed_dial_delete">Delete</string>
    <string name="htc_save_to_new">Create new contact</string>
    <string name="htc_save_to_exist">Save to existing contact</string>
    <string name="smartSearchHint1">Tap to see smart dial tips</string>
    <string name="voiceSearchHint1">Tap to voice search</string>
    <string name="smart_search_hint_title">Smart dial</string>
    <string name="smart_search_hint1">You can quickly filter contacts by name or number.</string>
    <string name="smart_search_hint2_1">For example, find a phone number that starts with</string>
    <string name="smart_search_hint2_2">by typing:</string>
    <string name="smart_search_hint3_1">Find a contact named</string>
    <string name="smart_search_hint3_2">by typing:</string>
    <string name="smart_search_hint3">Select the matched contact to place a call, or press and hold to see more options.</string>
    <string name="smart_search_hint_number">245</string>
    <string name="smart_search_hint_name">Amy</string>
    <string name="menu_view_personal_callHistory">View call history</string>
    <string name="match_count_complex">Searching contacts (%d matches)</string>
    <string name="match_count_singular">Searching contacts (%d match)</string>
    <string name="htc_last_call">Last call</string>
    <string name="htc_add_to_faves">Add to Faves</string>
    <string name="htc_dialer_menu_tips">Tips</string>
    <string name="htc_dialer_keypad_1_number">1</string>
    <string name="htc_dialer_keypad_1_alphabet" />
    <string name="htc_dialer_keypad_1_phonetic_alphabet" />
    <string name="htc_dialer_keypad_2_number">2</string>
    <string name="htc_dialer_keypad_2_alphabet">ABC</string>
    <string name="htc_dialer_keypad_2_phonetic_alphabet" />
    <string name="htc_dialer_keypad_3_number">3</string>
    <string name="htc_dialer_keypad_3_alphabet">DEF</string>
    <string name="htc_dialer_keypad_3_phonetic_alphabet" />
    <string name="htc_dialer_keypad_4_number">4</string>
    <string name="htc_dialer_keypad_4_alphabet">GHI</string>
    <string name="htc_dialer_keypad_4_phonetic_alphabet" />
    <string name="htc_dialer_keypad_5_number">5</string>
    <string name="htc_dialer_keypad_5_alphabet">JKL</string>
    <string name="htc_dialer_keypad_5_phonetic_alphabet" />
    <string name="htc_dialer_keypad_6_number">6</string>
    <string name="htc_dialer_keypad_6_alphabet">MNO</string>
    <string name="htc_dialer_keypad_6_phonetic_alphabet" />
    <string name="htc_dialer_keypad_7_number">7</string>
    <string name="htc_dialer_keypad_7_alphabet">PQRS</string>
    <string name="htc_dialer_keypad_7_phonetic_alphabet" />
    <string name="htc_dialer_keypad_8_number">8</string>
    <string name="htc_dialer_keypad_8_alphabet">TUV</string>
    <string name="htc_dialer_keypad_8_phonetic_alphabet" />
    <string name="htc_dialer_keypad_9_number">9</string>
    <string name="htc_dialer_keypad_9_alphabet">WXYZ</string>
    <string name="htc_dialer_keypad_9_phonetic_alphabet" />
    <string name="htc_dialer_keypad_0_number">0</string>
    <string name="htc_dialer_keypad_0_plus_sym">+</string>
    <string name="htc_dialer_keypad_0_phonetic_alphabet" />
    <string name="htc_dialer_keypad_star_sym">*</string>
    <string name="htc_dialer_keypad_star_phonetic_alphabet" />
    <string name="htc_dialer_keypad_pound_sym">\#</string>
    <string name="htc_dialer_keypad_pound_phonetic_alphabet" />
    <string name="Favorites">Favorites</string>
    <string name="CallHistory">Recent calls</string>
    <string name="Dialer">Dialer</string>
    <string name="roaming_assist_title">Add country code before number?</string>
    <string name="roaming_assist_message">"Proposed international format number
i.e.%s"</string>
    <string name="htc_title_black_list">Blocked callers</string>
    <string name="htc_menu_add_to_blacklist">Block caller</string>
    <string name="htc_toast_decide_caller_blocked">All calls from this number will be declined automatically. Would you like to block this caller?</string>
    <string name="htc_toast_add_to_blacklist_success">Caller blocked. Calls will be declined automatically.</string>
    <string name="htc_ip_dial">IP Dial</string>
    <string name="htc_ip_number_setting">IP number setting</string>
    <string name="htc_select_ip_dial_dialog_title">Select IP prefix number</string>
    <string name="htc_add_ip_dial_dialog_title">Input prefix number</string>
    <string name="htc_invalid_mmi_code">Connection problem or invalid MMI code</string>
    <string name="phone_settings">Settings</string>
    <string name="htc_dialer_menu_voicecall">Voice call</string>
    <string name="htc_dialer_menu_videocall">Video call</string>
    <string name="init_videocall">Video Call</string>
    <string name="menu_call_history">@string/custom_call_history</string>
    <string name="menu_remove_from_recent_call">@string/custom_remove_from_recent_call</string>
    <string name="menu_view_person_recent_call">@string/custom_view_person_recent_call</string>
    <string name="home_dialing_title">Home dialing assistant</string>
    <string name="home_dialing_message">Add country code number?</string>
    <string name="home_dialing_yes">Yes. Use number below:</string>
    <string name="home_dialing_no">No. Use original number:</string>
    <string name="home_dialing_or">Or, select proper country code</string>
    <string name="home_dialing_select_proper_country_code">select proper country code</string>
    <string name="do_not_ask_me_again">"Don't ask me again"</string>
    <string name="common_icon_show_keypad">common_icon_show_keypad</string>
    <string name="common_icon_hide_keypad">common_icon_hide_keypad</string>
    <string name="common_icon_all_people">common_icon_all_people</string>
    <string name="common_icon_callhistory">common_icon_callhistory</string>
    <string name="common_icon_back_to_navigator">common_icon_back_to_navigator</string>
    <string name="common_icon_toggle_handwriting">common_icon_toggle_handwriting</string>
    <string name="common_icon_toggle_keypad">common_icon_toggle_keypad</string>
    <string name="people_on">people_on</string>
    <string name="calls">Calls</string>
    <string name="htc_emergency_hint">Emergency Mode</string>
    <string name="htc_emergency_hint_key">Press Menu to exit emergency mode</string>
    <string name="htc_exit_emergency">Exit Emergency Mode</string>
    <string name="htc_ota_hint">Init. Programming Required</string>
    <string name="htc_ota_hint_key">Dial *228 to start</string>
    <string name="htcCdmaPowerSaveHint">Power Save Mode</string>
    <string name="htcCdmaPowerSaveHint1">Press number key to exit</string>
    <string name="htc_sprint_customer_service">Customer Service</string>
    <string name="recognizer_not_prensent">Recognizer not present</string>
    <string name="all_contacts">All contacts</string>
    <string name="htc_menu_dial_prefix_number">**133 callback</string>
    <string name="contacts">Contacts</string>
    <string name="no_uimsim_vm_number_msg">No voicemail number is stored on the UIM/SIM card</string>
    <string name="bring_kyepad_on">Keypad</string>
    <string name="arrange_tabs">Arrange Icons</string>
    <string name="dial">Dial</string>
    <string name="voice_search">Voice search</string>
    <string name="phone_icon_voice_m">phone_icon_voice_m</string>
</resources>
