<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/layout_style_dialer_keypad"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/one" style="@style/image_style_dialer_button">
            <ImageView android:src="@drawable/htc_pin_icon_record" style="@style/image_style_dialer_button_symbol_voicemail" />
            <TextView android:text="@string/htc_dialer_keypad_1_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_1_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_1_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/two" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_2_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_2_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_2_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/three" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_3_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_3_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_3_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/four" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_4_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_4_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_4_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/five" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_5_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_5_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_5_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/six" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_6_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_6_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_6_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/seven" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_7_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_7_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_7_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/eight" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_8_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_8_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_8_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/nine" style="@style/image_style_dialer_button">
            <TextView android:text="@string/htc_dialer_keypad_9_number" style="@style/text_style_dialer_button_number" />
            <TextView android:text="@string/htc_dialer_keypad_9_alphabet" style="@style/text_style_dialer_button_alphabet" />
            <TextView android:text="@string/htc_dialer_keypad_9_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/img_1x1" style="@style/image_style_dialer_button">
            <ImageView android:src="@drawable/htc_pin_icon_star" style="@style/image_style_dialer_button_symbol" />
            <TextView android:text="@string/htc_dialer_keypad_star_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/zero" style="@style/image_style_dialer_button">
            <ImageView android:src="@drawable/htc_pin_icon_plus" style="@style/image_style_dialer_button_symbol_plus" />
            <TextView android:text="@string/htc_dialer_keypad_0_number" style="@style/text_style_dialer_button_zero_number" />
            <TextView android:text="@string/htc_dialer_keypad_0_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/img_1x2" style="@style/image_style_dialer_button">
            <ImageView android:visibility="gone" android:src="@drawable/htc_pin_icon_ip" style="@style/image_style_dialer_button_symbol_ip" />
            <ImageView android:src="@drawable/htc_pin_icon_pound" style="@style/image_style_dialer_button_symbol" />
            <TextView android:text="@string/htc_dialer_keypad_pound_phonetic_alphabet" style="@style/text_style_dialer_button_phonetic_alphabet" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
