<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/layout_style_phone_keypad"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/one" style="@style/image_style_phone_button">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/htc_pin_icon_record" style="@style/image_style_phone_button_symbol_voicemail" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_1_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_1_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/two" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_2_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_2_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/three" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_3_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_3_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/four" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_4_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_4_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/five" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_5_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_5_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/six" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_6_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_6_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/seven" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_7_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_7_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/eight" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_8_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_8_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/nine" style="@style/image_style_phone_button">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_9_number" style="@style/text_style_phone_button_number" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_9_alphabet" style="@style/text_style_phone_button_alphabet" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@com.htc:id/img_1x1" style="@style/image_style_phone_button">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/htc_pin_icon_star" style="@style/image_style_phone_button_symbol" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/zero" style="@style/image_style_phone_button">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/htc_pin_icon_plus" style="@style/image_style_phone_button_symbol_plus" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/htc_dialer_keypad_0_number" style="@style/text_style_phone_button_zero_number" />
        </FrameLayout>
        <FrameLayout android:id="@com.htc:id/img_1x2" style="@style/image_style_phone_button">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/htc_pin_icon_pound" style="@style/image_style_phone_button_symbol" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
